--- a/jupiter.ipynb
+++ b/jupiter.ipynb
@@ -17,6 +17,34 @@
    "source": [
     "print(\"hello wfworld\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "47541df6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "list = [1, 2, 3, 4, 5]\n",
+    "mx=1\n",
+    "\n",
+    "for i in list:\n",
+    "    mx=min(mx, i)\n",
+    "\n",
+    "    print(i**mx)"
+   ]
   }
  ],
  "metadata": {
